--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body class="">
     
-   <header>
+   <header class="sticky backdrop-blur top-0 py-4 overflow-hidden">
     <div class="flex gap-14 lg:justify-between pl-4  bg-[#F9F7F3] p-6 h-97 max-w-7xl mx-auto">
 
         <div>
