--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body class="">
     
-   <header class="sticky backdrop-blur top-0 py-4 overflow-hidden">
-    <div class="flex gap-14 lg:justify-between pl-4  bg-[#F9F7F3] p-6 h-97 max-w-7xl mx-auto">
+   <header class="sticky backdrop-blur top-0  overflow-hidden">
+    <div class="flex gap-14 lg:justify-around pl-4  bg-[#F9F7F3] p-6 h-97">
 
         <div>
             <button class="bg-[#B4F461] pl-9 pr-9 p-4 rounded-lg text-xl font-bold">Blog</button>
