--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     <button class="bg-[#1111110D]  rounded-lg lg:mt-0 mt-4">
         <div class="flex justify-center gap-3 items-center  pt-3 pr-4 pb-3 pl-4 ">
             <img src="assets/coin.png" alt="">
-            <h1 class="donation-amount">0</h1>
+            <h1 id="2nd-donation-amount" class="donation-amount">0</h1>
             <p>BDT</p>
         </div>
         
@@ -92,8 +92,8 @@
         <h1 class="text-xl font-bold mt-7 mb-4">Donate for Flood at Noakhali, Bangladesh</h1>
         <p class="lg:w-[522px] mb-6 text-[#111111B3] font-light"> The recent floods in Noakhali have caused significant damage to homes  infrastructure. Your donation will help provide essential supplies and  to those affected by this disaster. Every contribution, big or small, makes  difference. Please join us in supporting the relief efforts and making a positive impact on the lives of those in need.</p>
         <div class="grid mt-4">
-            <input class="put-amount lg:w-[522px] border rounded-lg p-4" type="text" placeholder="Write Donation Amount">
-            <button class="bg-[#B4F461] pt-4 pb-4 pl-8 pr-8 rounded-lg mt-4 font-bold text-xl donate-btn">Donate Now</button>
+            <input id="2nd-donation-input" class="put-amount lg:w-[522px] border rounded-lg p-4" type="text" placeholder="Write Donation Amount">
+            <button id="2nd-donation-btn" class="bg-[#B4F461] pt-4 pb-4 pl-8 pr-8 rounded-lg mt-4 font-bold text-xl donate-btn">Donate Now</button>
         </div>
     </div>
 </div>
@@ -112,7 +112,7 @@
     <button class="bg-[#1111110D]  rounded-lg lg:mt-0 mt-4">
         <div class="flex justify-center gap-3 items-center  pt-3 pr-4 pb-3 pl-4 ">
             <img src="assets/coin.png" alt="">
-            <h1 class="donation-amount">0</h1>
+            <h1 id="3rd-donation-amount" class="donation-amount">0</h1>
             <p>BDT</p>
         </div>
         
@@ -121,8 +121,8 @@
         <h1 class="text-xl font-bold mt-7 mb-4">Donate for Flood at Noakhali, Bangladesh</h1>
         <p class="lg:w-[522px] mb-6 text-[#111111B3] font-light"> The recent floods in Noakhali have caused significant damage to homes  infrastructure. Your donation will help provide essential supplies and  to those affected by this disaster. Every contribution, big or small, makes  difference. Please join us in supporting the relief efforts and making a positive impact on the lives of those in need.</p>
         <div class="grid mt-4">
-            <input class="put-amount lg:w-[522px] border rounded-lg p-4" type="text" placeholder="Write Donation Amount">
-            <button class="bg-[#B4F461] pt-4 pb-4 pl-8 pr-8 rounded-lg mt-4 font-bold text-xl donate-btn">Donate Now</button>
+            <input id="3rd-donation-input" class="put-amount lg:w-[522px] border rounded-lg p-4" type="text" placeholder="Write Donation Amount">
+            <button id="3rd-donation-btn" class="bg-[#B4F461] pt-4 pb-4 pl-8 pr-8 rounded-lg mt-4 font-bold text-xl donate-btn">Donate Now</button>
         </div>
     </div>
 </div>
