corrected some mistakes

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="flex gap-14 lg:justify-around pl-4  bg-[#F9F7F3] p-6 h-97">
 
         <div>
-            <button class="bg-[#B4F461] pl-9 pr-9 p-4 rounded-lg text-xl font-bold">Blog</button>
+            <button id="blog" class="bg-[#B4F461] pl-9 pr-9 p-4 rounded-lg text-xl font-bold">Blog</button>
         </div>
 
 <div class="flex items-center gap-4 ">
@@ -139,5 +139,6 @@
    </footer>
 
     <script src="index.js"></script>
+    <script src="transferring.js"></script>
 </body>
 </html>
