going from one page to another done

--- a/index.html
+++ b/index.html
@@ -140,5 +140,6 @@
 
     <script src="index.js"></script>
     <script src="transferring.js"></script>
+    <script src="transferring2.js"></script>
 </body>
 </html>
