toggle the button

--- a/index.html
+++ b/index.html
@@ -30,9 +30,10 @@
     </div>
 
 <div class="flex items-center justify-center mt-20 gap-4">
-    <button id="Donation-BTN" class="bg-[#B4F461] pl-6 pr-6 pt-4 pb-4 text-xl font-bold rounded-lg">Donation</button>
-    <button id="history-btn" class="border rounded-lg text-xl text-[#111111B3]
-    pr-6 pl-6 pt-4 pb-4 font-medium">History</button>
+    <button id="Donation-BTN" class="first-class
+    text-xl border pl-6 pr-6 pt-4 pb-4 rounded-lg">Donation</button>
+    <button id="history-btn" class="border rounded-lg removingColor
+    pr-6 pl-6 pt-4 pb-4">History</button>
 </div>
 
    </header>
@@ -180,6 +181,8 @@
     <script src="history.js"></script>
     <script src="challenge.js"></script>
     <script src="challenge2.js"></script>
+    <script src="toogle.js"></script>
+    <script src="toogle2.js"></script>
     <script>
 
 
