--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@ donate2.addEventListener('click', function() {
     const amountAgain2 = parseFloat(amountNumber2.value); 
     if (!isNaN(amountAgain2) && amountAgain2 > 0) {
         totalAmount2 += amountAgain2;
-        donationMessage2.textContent = `${totalAmount2} Taka is donated for famine-2024 (flood)`; // 
+        donationMessage2.textContent = `${totalAmount2} Taka is donated for famine-2024 (flood)`; 
         amountNumber2.value = '';
 
         const time2 = new Date();
@@ -267,7 +267,7 @@ donate3.addEventListener('click', function() {
     const amountAgain3 = parseFloat(amountNumber3.value); 
     if (!isNaN(amountAgain3) && amountAgain3 > 0) {
         totalAmount3 += amountAgain3;
-        donationMessage3.textContent = `${totalAmount3} Taka is donated for flood`; // 
+        donationMessage3.textContent = `${totalAmount3} Taka is donated for flood`; 
         amountNumber3.value = '';
 
         const time3 = new Date();
